--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Heroku-v2ray",
+  "name": "dcbbg",
   "description": "将v2ray部署在Heroku上",
   "keywords": [
     "v2ray VMess VLESS"
@@ -21,8 +21,8 @@
       "required": true
     }
   },
-  "website": "https://github.com/us234/v2ray-cat",
-  "repository": "https://github.com/us234/v2ray-cat",
+  "website": "https://github.com/bhui8h/dcbbg",
+  "repository": "https://github.com/bhui8h/dcbbg",
   "stack": "container",
   "features": [
     "runtime-dyno-metadata"
